--- a/TrainWarningAPP/package.json
+++ b/TrainWarningAPP/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.23",
     "expo-status-bar": "~1.12.1",
