--- a/TrainWarningAPP/package.json
+++ b/TrainWarningAPP/package.json
@@ -14,6 +14,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/native-stack": "^6.11.0",
+    "@googlemaps/markerclusterer": "^2.5.1",
+    "@vis.gl/react-google-maps": "latest",
     "@types/react": "~18.2.79",
     "axios": "^1.7.3",
     "expo": "~51.0.23",
